--- a/includes/lib/src/common/_css/style.css
+++ b/includes/lib/src/common/_css/style.css
@@ -304,7 +304,7 @@ textarea:-moz-placeholder {
     margin-right: 3%;
 }
 
-#card_payment_form input[type="text"], input[type="tel"], input[type="email"] form select {
+#card_payment input {
     height: 2.8em;
     margin: 0.5em 0;
     padding: 0.5em 1em;
