--- a/includes/lib/src/common/_tpl/paymentForm.phtml
+++ b/includes/lib/src/common/_tpl/paymentForm.phtml
@@ -5,6 +5,9 @@
  */
 
 ?>
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+</head>
 <script type="text/javascript">
     function redirect() {
         document.getElementById('tpay-payment').submit();
