--- a/includes/lib/src/common/_tpl/bankSelection.phtml
+++ b/includes/lib/src/common/_tpl/bankSelection.phtml
@@ -38,12 +38,13 @@
 </div>
 
 <script>
-    var s = document.createElement('script'),
-        regulation_checkbox = document.getElementById('tpay-accept-regulations-checkbox'),
-        submit_form_input = document.getElementById('tpay-payment-submit'),
-        regulations_form_input = document.getElementById('tpay-regulations-input'),
-        bank_selection_form = document.getElementById('bank-selection-form'),
-        bank_selection_form2 = document.getElementById('bank-selection-form2'),
+    var s = document.createElement('script');
+    function renderTpayChannels(installmentsActive) {
+        var regulation_checkbox = document.getElementById('tpay-accept-regulations-checkbox'),
+            submit_form_input = document.getElementById('tpay-payment-submit'),
+            regulations_form_input = document.getElementById('tpay-regulations-input'),
+            bank_selection_form = document.getElementById('bank-selection-form'),
+            bank_selection_form2 = document.getElementById('bank-selection-form2');
         changeBank = function (bank_id) {
             var input = document.getElementById('tpay-channel-input'),
                 bank_block = document.getElementById('bank-' + bank_id),
@@ -62,40 +63,61 @@
                 bank_block.className = bank_block.className + ' bank-active';
             }
         };
-    s.src = 'https://secure.tpay.com/channels-<?php echo $data['merchant_id'] ?>1.js';
-    s.onload = function () {
-        var str = '', first = true, i, str2 = '', temp;
-        var others = [29, 31, 49, 50, 57, 58, 59];
+        s.src = 'https://secure.tpay.com/channels-<?php echo $data['merchant_id'] ?>1.js';
+        s.onload = function () {
+            var str = '', first = true, i, str2 = '', temp;
+            var others = [29, 31, 49, 50, 57, 58, 59];
 
-        for (i in tr_channels) {
-            var channel = tr_channels[i],
-                id = channel[0],
-                width_style = (channel[0] == 40) ? 'width:270px' : '',
-                checked, class_name;
+            for (i in tr_channels) {
+                var channel = tr_channels[i],
+                    id = channel[0],
+                    width_style = (channel[0] == 40) ? 'width:270px' : '',
+                    checked, class_name;
+                if (id === '49' && installmentsActive === false) {
+                    continue;
+                }
+                if (first) {
+                    checked = ' checked';
+                    class_name = ' bank-active';
+                    first = false;
+                    changeBank(id);
+                } else {
+                    checked = '';
+                    class_name = ''
+                }
+                temp = '<div class="bank-block' + class_name + '" id="bank-' + id +
+                    '" style="background-image:url(' + channel[3] + ');' + width_style +
+                    '"><label onclick="changeBank(' + id + ')"><input type="radio" name="bank-select" value="' +
+                    id + '" ' + checked + ' style="visibility: hidden" /></label></div>';
 
-            if (first) {
-                checked = ' checked';
-                class_name = ' bank-active';
-                first = false;
-                changeBank(id);
-            } else {
-                checked = '';
-                class_name = ''
+                if (inArray(id, others) === false) {
+                    str += temp;
+                } else {
+                    str2 += temp;
+                }
             }
-            temp = '<div class="bank-block' + class_name + '" id="bank-' + id +
-                '" style="background-image:url(' + channel[3] + ');' + width_style +
-                '"><label onclick="changeBank(' + id + ')"><input type="radio" name="bank-select" value="' +
-                id + '" ' + checked + ' style="visibility: hidden" /></label></div>';
+            bank_selection_form.innerHTML = str;
+            bank_selection_form2.innerHTML = str2;
+        };
 
-            if (inArray(id, others) === false) {
-                str += temp;
-            } else {
-                str2 += temp;
+        document.getElementsByTagName('head')[0].appendChild(s);
+
+        <?php if ($data['show_regulations_checkbox'] === true){ ?>
+
+        submit_form_input.onclick = function () {
+            if (regulations_form_input.value == 0) {
+                alert('<?php tpay\Lang::l('acceptance_is_required') ?>');
+                return false;
             }
-        }
-        bank_selection_form.innerHTML = str;
-        bank_selection_form2.innerHTML = str2;
-    };
+            return true;
+        };
+
+        regulation_checkbox.onchange = function () {
+            regulations_form_input.value = (this.checked) ? 1 : 0;
+        };
+
+        <?php } ?>
+    }
 
     function inArray(needle, haystack) {
         var length = haystack.length;
@@ -104,23 +126,5 @@
         }
         return false;
     }
-
-    document.getElementsByTagName('head')[0].appendChild(s);
-
-    <?php if ($data['show_regulations_checkbox'] === true){ ?>
-
-    submit_form_input.onclick = function () {
-        if (regulations_form_input.value == 0) {
-            alert('<?php tpay\Lang::l('acceptance_is_required') ?>');
-            return false;
-        }
-        return true;
-    };
-
-    regulation_checkbox.onchange = function () {
-        regulations_form_input.value = (this.checked) ? 1 : 0;
-    };
-
-    <?php } ?>
 
 </script>
