--- a/includes/lib/src/common/_tpl/bankSelectionList.phtml
+++ b/includes/lib/src/common/_tpl/bankSelectionList.phtml
@@ -24,41 +24,45 @@ if ($data['show_regulations_checkbox'] === true) { ?>
 </div>
 <?php echo $data['form'] ?>
 <script>
-    var s = document.createElement('script'),
-        submit_form_input = document.getElementById('tpay-payment-submit'),
-        regulations_form_input = document.getElementById('tpay-regulations-input'),
-        regulation_checkbox = document.getElementById('tpay-accept-regulations-checkbox'),
+    var s = document.createElement('script');
+    function renderTpayChannels(installmentsActive) {
+        var submit_form_input = document.getElementById('tpay-payment-submit'),
+            regulations_form_input = document.getElementById('tpay-regulations-input'),
+            regulation_checkbox = document.getElementById('tpay-accept-regulations-checkbox');
         changeBank = function () {
             document.getElementById('tpay-channel-input').value = document.getElementById('tpay-bank-list').value;
         };
-    s.src = 'https://secure.tpay.com/channels-<?php echo $data['merchant_id'] ?>1.js';
-    s.onload = function () {
-        var str = '', i;
-        for (i in tr_channels) {
-            var channel = tr_channels[i],
-                id = channel[0],
-                name = channel[1];
-            str += '<option value="' + id + '" >' + name + '</option>';
-        }
-        document.getElementById('tpay-bank-list').innerHTML = str;
-        changeBank();
-    };
-    document.getElementsByTagName('head')[0].appendChild(s);
+        s.src = 'https://secure.tpay.com/channels-<?php echo $data['merchant_id'] ?>1.js';
+        s.onload = function () {
+            var str = '', i;
+            for (i in tr_channels) {
+                var channel = tr_channels[i],
+                    id = channel[0],
+                    name = channel[1];
+                if (id === '49' && installmentsActive === false) {
+                    continue;
+                }
+                str += '<option value="' + id + '" >' + name + '</option>';
+            }
+            document.getElementById('tpay-bank-list').innerHTML = str;
+            changeBank();
+        };
+        document.getElementsByTagName('head')[0].appendChild(s);
 
-    <?php if ($data['show_regulations_checkbox'] === true){ ?>
+        <?php if ($data['show_regulations_checkbox'] === true){ ?>
 
-    submit_form_input.onclick = function () {
-        if (regulations_form_input.value == 0) {
-            alert('<?php tpay\Lang::l('acceptance_is_required') ?>');
-            return false;
-        }
-        return true;
-    };
+        submit_form_input.onclick = function () {
+            if (regulations_form_input.value == 0) {
+                alert('<?php tpay\Lang::l('acceptance_is_required') ?>');
+                return false;
+            }
+            return true;
+        };
 
-    regulation_checkbox.onchange = function () {
-        regulations_form_input.value = (this.checked) ? 1 : 0;
-    };
+        regulation_checkbox.onchange = function () {
+            regulations_form_input.value = (this.checked) ? 1 : 0;
+        };
 
-    <?php } ?>
-
+        <?php } ?>
+    }
 </script>
