--- a/includes/lib/src/common/_tpl/bankSelectionList.phtml
+++ b/includes/lib/src/common/_tpl/bankSelectionList.phtml
@@ -8,17 +8,17 @@
 <style>
     <?php include_once dirname(__FILE__) . '/../_css/style.css'; ?>
 </style>
-<?php
-if ($data['show_regulations_checkbox'] === true) { ?>
 <div class="insidebg" id="main-payment">
     <div id="kanaly_v">
         <select name="bank_list" id="tpay-bank-list" onchange="changeBank()"></select>
-        <p>
-            <input id="tpay-accept-regulations-checkbox" type="checkbox" name="regulations" value="0">
+        <?php if ($data['show_regulations_checkbox'] === true) { ?>
+            <p>
+                <input id="tpay-accept-regulations-checkbox" type="checkbox" name="regulations" value="0">
 
-            <?php tpay\Lang::l('accept') ?> <a href="<?php echo $data['regulation_url'] ?>"
-                                               target="_blank"><?php tpay\Lang::l('regulations') ?></a>
-        </p>
+                <?php tpay\Lang::l('accept') ?> <a href="<?php echo $data['regulation_url'] ?>"
+                                                   target="_blank"><?php tpay\Lang::l('regulations_url') ?></a>
+                <?php tpay\Lang::l('regulations'); ?>
+            </p>
         <?php } ?>
     </div>
 </div>
@@ -32,14 +32,14 @@ if ($data['show_regulations_checkbox'] === true) { ?>
         changeBank = function () {
             document.getElementById('tpay-channel-input').value = document.getElementById('tpay-bank-list').value;
         };
-        s.src = 'https://secure.tpay.com/channels-<?php echo $data['merchant_id'] ?>1.js';
+        s.src = 'https://secure.tpay.com/groups-<?php echo $data['merchant_id'] . $data['online'] ?>.js';
         s.onload = function () {
             var str = '', i;
-            for (i in tr_channels) {
-                var channel = tr_channels[i],
+            for (i in tr_groups) {
+                var channel = tr_groups[i],
                     id = channel[0],
                     name = channel[1];
-                if (id === '49' && installmentsActive === false) {
+                if (id === '109' && installmentsActive === false) {
                     continue;
                 }
                 str += '<option value="' + id + '" >' + name + '</option>';
