--- a/includes/_tpl/cardForm.phtml
+++ b/includes/_tpl/cardForm.phtml
@@ -1,101 +1,160 @@
 <?php
 
-/*
- *
- * @author tpay.com
- *
- * Author URI: http://www.tpay.com
- */
+$path = $this->pluginUrl;
 
-$path = plugin_dir_url(__FILE__);
-if (
-    (isset($_SERVER['HTTP_X_FORWARDED_PROTO']) && $_SERVER['HTTP_X_FORWARDED_PROTO'] === 'https')
-    || (isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] === 'on')
-    || is_ssl()
-) {
-    $path = str_replace('http://', 'https://', $path);
-}
 ?>
 <script>
-    if(!window.jQuery)
-    {
+    if (!window.jQuery) {
         var script = document.createElement('script');
         script.type = "text/javascript";
-        script.src = "<?php echo $path ?>../lib/src/common/_js/jquery.min.js";
+        script.src = "<?php echo $path ?>/lib/src/common/_js/jquery.min.js";
         document.getElementsByTagName('head')[0].appendChild(script);
     }
 </script>
-<script type="text/javascript" src="<?php echo $path ?>../lib/src/common/_js/jsencrypt.min.js"></script>
-<script type="text/javascript" src="<?php echo $path ?>../lib/src/common/_js/string_routines.js"></script>
-<script type="text/javascript" src="<?php echo $path ?>../_js/visibilityChangesHandler.js?3"></script>
-<script type="text/javascript" src="<?php echo $path ?>../lib/src/common/_js/jquery.payment.js"></script>
-<script type="text/javascript" src="<?php echo $path ?>../_js/tpayCards.js?58"></script>
-<link rel="stylesheet" href="<?php echo $path ?>../lib/src/common/_css/style.css?16">
+<script type="text/javascript" src="<?php echo $path ?>/lib/src/common/_js/jsencrypt.min.js"></script>
+<script type="text/javascript" src="<?php echo $path ?>/lib/src/common/_js/string_routines.js"></script>
+<script type="text/javascript" src="<?php echo $path ?>/_js/visibilityChangesHandler.js?3"></script>
+<script type="text/javascript" src="<?php echo $path ?>/lib/src/common/_js/jquery.payment.js"></script>
+<script type="text/javascript" src="<?php echo $path ?>/_js/tpayCards.js?61"></script>
+<link rel="stylesheet" href="<?php echo $path ?>/lib/src/common/_css/style.css?20">
+<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 
-<input type="hidden" name="carddata" id="card_data" value=""/>
-<div class="insidebg">
-    <?php echo $this->description; ?>
+<p><?php echo $this->description; ?></p>
+<div class="tpay-insidebg">
+    <div class="tpay-header-wrapper">
+        <div class="tpay-header-logo">
+            <img class="tpay-logo" src="https://tpay.com/img/banners/tpay_logo_white.svg" style="float: left; padding: 35px 0 0 15px; max-height: 100%"/>
+        </div>
+        <div class="tpay-header-belt"></div>
+    </div>
     <p id="tpayRSA" style="display: none"><?php echo $this->keyRSA; ?></p>
-    <div id="powered_by"></div>
-    <div id="saved_card_payment">
-        <?php
-        foreach ($data['cards'] as $cardId => $cardNoShort) {
-            echo '<label><input type="radio" name="tpayCardId" class="tpay_card_radio" value="'.$cardId.'"/>' . tpay\Lang::get('saved_card') .$cardNoShort.'</label>';
-        }
-        if (count($data['cards']) > 0) {
-            echo '<label><input type="radio" name="tpayCardId" class="tpay_new_card_radio" value="newCard"/>';
-            tpay\Lang::l('new_card');
-            echo '</label>';
-        }
-        ?>
-    </div>
-    <div id="new_card_form" style="<?php if (!empty($data['cards'])) { echo 'display:none'; }; ?>">
-        <div id="card_payment">
-            <label for="card_number"><?php tpay\Lang::l('card_number') ?></label>
-            <input id="card_number" autocompletetype="cc-number" size="30" type="tel" autocomplete="off"
-                   maxlength="23" placeholder="0000 0000 0000 0000" tabindex="1" value=""/>
-            <div id="expiry_date_wrapper">
-                <label for="transaction_card_expiry_month"><?php tpay\Lang::l('expiration_date') ?></label>
-                <input id="expiry_date" maxlength="9" type="tel" placeholder="00 / 00" autocomplete="off"
-                       autocompletetype="cc-exp" tabindex="2" value=""/>
+    <div class="tpay-panel-inside-content">
+        <input name="tpay-cards-regulations-input" id="tpay-cards-regulations-input" type="hidden">
+        <div id="card_payment_form" class="tpay-cards-choice">
+            <?php if (!empty($data['userCards'])) { ?>
+                <div id="saved_card_payment" style="visibility: visible">
+                <?php
+                foreach ($data['userCards'] as $card) { ?>
+                    <div>
+                        <input type="radio" name="savedId"
+                               id="cardN<?php echo $card['cardId'] ?>"
+                               value="<?php echo $card['cardId'] ?>"/>
+                        <label for="cardN<?php echo $card['cardId'] ?>"><?php $lang->l('saved_card_label');
+                            echo $card['shortCode'];
+                            if (isset($card['vendor'])) { ?>
+                                <div id="saved_icon" class="tpay-<?php echo $card['vendor'] ?>-icon"></div>
+                            <?php } ?>
+                        </label>
+                    </div>
+                <?php } ?>
+                </div>
+            <div class="tpay-new-card-section">
+                <input type="radio" name="savedId" id="newCard" value="new"/>
+                <label for="newCard"> <?php $lang->l('new_card_label'); ?></label>
             </div>
-            <div id="cvc_wrapper">
-                <label for="cvc">CVC <span
-                        title="<?php tpay\Lang::l('signature') ?>">?</span></label>
-                <input id="cvc" maxlength="3" type="tel" autocomplete="off" autocompletetype="cc-cvc" placeholder="000"
-                       tabindex="3" value="" pattern=".{3,}"/>
+            <div id="card_form" style="display: none">
+                <?php } ?>
+                <input type="hidden" name="card_data" id="card_data" value=""/>
+                <input type="hidden" name="card_vendor" id="card_vendor" value=""/>
+                <div class="tpay-channel-form-wrapper tpay-content-wrapper-class">
+                    <div id="card_payment" class="tpay-input-wrapper">
+                        <div class="tpay-col">
+                            <div class="tpay-row">
+                                <div class="tpay-input-wrapper">
+                                    <div class="tpay-input-credit-card-number">
+                                        <div class="tpay-input-label"><?php $lang->l('card_number') ?></div>
+                                        <input id="card_number"
+                                               pattern="\d*"
+                                               autocompletetype="cc-number"
+                                               size="30"
+                                               type="tel"
+                                               autocomplete="off"
+                                               maxlength="23"
+                                               placeholder="XXXX XXXX XXXX XXXX"
+                                               tabindex="1"
+                                               value=""
+                                               class="tpay-input-value"
+                                        />
+                                        <div class="tpay-card-icon "></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tpay-col">
+                            <div class="tpay-row">
+                                <div class="tpay-expiration-date-input tpay-input-wrapper">
+                                    <div class="tpay-input-label"><?php $lang->l('expiration_date') ?></div>
+                                    <input id="expiry_date"
+                                           maxlength="9"
+                                           type="tel"
+                                           placeholder="01 / 2020"
+                                           autocomplete="off"
+                                           autocompletetype="cc-exp"
+                                           tabindex="2"
+                                           value=""
+                                           class="tpay-input-value"
+                                    />
+                                </div>
+                                <div class="tpay-cvv-input tpay-input-wrapper">
+                                    <div class="tpay-input-label tpay-input-cvc" title="<?php $lang->l('signature') ?>">
+                                        CVC
+                                    </div>
+                                    <input id="cvc"
+                                           maxlength="4"
+                                           type="tel"
+                                           autocomplete="off"
+                                           autocompletetype="cc-cvc"
+                                           placeholder="XXX"
+                                           tabindex="3"
+                                           value=""
+                                           class="tpay-input-value"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="tpay-row" style="width: 10px; height: 10px;"></div>
+                <div class="tpay-row">
+                    <div class="tpay-amPmCheckbox">
+                        <input type="checkbox" id="card_save" name="card_save"/>
+                        <label for="card_save"
+                               class="tpay-info-label"
+                               title="<?php $lang->l('save_card_info') ?>"><?php $lang->l('save_card') ?>
+                        </label>
+                    </div>
+                </div>
+                <p id="info_msg_not_supported" style="display: none"><?php $lang->l('not_supported_card') ?></p>
+                <p id="info_msg_not_valid" style="display: none"><?php $lang->l('not_valid_card') ?></p>
+                <div id="loading_scr" style="display:none">
+                    <img src="<?php echo $path ?>/lib/src/common/_img/loading.gif"
+                         style="vertical-align: middle;"/><?php $lang->l('processing') ?>
+                </div>
+                <input type="hidden" name="tpayID" value="<?php echo $this->midId; ?>">
+                <?php if (!empty($data['userCards'])) { ?>
             </div>
-            <div class="amPmCheckbox">
-                <input type="checkbox" id="card_save" name="card_save"/>
-                <label for="card_save"><?php tpay\Lang::l('save_card'); ?></label>
-            </div>
-            <input type="hidden" name="tpayID" value="<?php echo $this->midId; ?>">
+        <?php } ?>
         </div>
-        <div id="card_icons">
-            <div class="card_icon" id="visa"></div>
-            <div class="card_icon" id="master"></div>
-            <div class="card_icon" id="maestro"></div>
-            <div class="card_icon" id="diners"></div>
-            <div class="card_icon" id="jcb"></div>
-            <div class="card_icon" id="amex"></div>
-        </div>
-        <p id="info_msg_not_supported" style="display: none"><?php tpay\Lang::l('not_supported_card') ?></p>
-        <p id="info_msg_invalid" style="visibility: hidden"><?php tpay\Lang::l('invalid_card') ?></p>
-        <div id="termsCheckboxBox">
-            <br/>
-            <input id="tpay-cards-accept-regulations-checkbox" type="checkbox" name="regulations" style="
-    text-align: right;
-    float:left;">
-            <label for="tpay-cards-accept-regulations-checkbox" style="display: inline">
-                <?php tpay\Lang::l('accept') ?> <a href="<?php echo $data['regulation_url'] ?>"
-                                                   target="_blank"><?php tpay\Lang::l('regulations_url') ?></a>
-                <?php tpay\Lang::l('regulations'); ?>
-            </label>
-        </div>
-    </div>
-    <div id="loading_scr" style="display:none"><img src="<?php echo $path ?>../lib/src/common/_img/loading.gif"
-                                                    style="vertical-align: middle;"/>&nbsp;&nbsp;Processing data,
-        please
-        wait...
     </div>
 </div>
+<div class="tpay-row">
+    <div class="tpay-amPmCheckbox">
+        <input id="tpay-cards-accept-regulations-checkbox" type="checkbox" value="0">
+        <label for="tpay-cards-accept-regulations-checkbox" class="tpay-info-label">
+            <?php $lang->l('accept') ?> <a href="<?php echo $data['regulation_url'] ?>"
+                                           target="_blank"><?php $lang->l('regulations_url') ?></a>
+            <?php $lang->l('regulations'); ?>
+            <?php $lang->l('privacy_policy');?>
+            <a href="<?php echo $data['policy_privacy_url']?>" target="_blank"><?php $lang->l('privacy_policy_href')?></a>
+
+        </label>
+    </div>
+</div>
+<script type="text/javascript">
+    var cards_regulation_checkbox = document.getElementById('tpay-cards-accept-regulations-checkbox'),
+        cards_regulations_input = document.getElementById('tpay-cards-regulations-input');
+
+    cards_regulation_checkbox.onchange = function () {
+        cards_regulations_input.value = (this.checked) ? 1 : 0;
+    };
+</script>
