--- a/includes/_tpl/settingsAdminCards.phtml
+++ b/includes/_tpl/settingsAdminCards.phtml
@@ -1,25 +1,11 @@
-<?php
-
-/*
- * Created by PhpStorm.
- * User: user
- * Date: 25.01.2017
- * Time: 13:44
- */
-
-?>
-<h2><?php _e('tpay.com', 'woocommerce'); ?></h2>
+<h2><?php _e('Tpay credit cards', 'woocommerce'); ?></h2>
 <table class="form-table">
     <?php $this->generate_settings_html(); ?>
 </table>
 
 <script type="text/javascript">
-
-
     jQuery(document).ready(function () {
         getValuesTpay();
-
-
         for (var i = 1; i < 11; i++) {
             jQuery("#woocommerce_tpaycards_midType" + i).change(function () {
 
@@ -47,15 +33,15 @@
         var id = jQuery("#woocommerce_tpaycards_midNumber option:selected").val();
         var mid = 0;
         if (id == 1) {
-            mid = 6;
+            mid = 7;
         } else {
-            mid = (id - 1) * 13 + 6;
+            mid = (id - 1) * 13 + 7;
         }
 
         var maxMid = mid + 13;
 
 
-        for (var n = 6; n < tr.length; n++) {
+        for (var n = 7; n < tr.length; n++) {
             tr[n].style.display = "none";
         }
         for (var o = mid; o < maxMid; o++) {
